--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/testing
+spring.datasource.username=root
+spring.datasource.password=sqlroot1
+spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8083
